--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=7813374449:AAENBb8BN8_oD2QOSP31tKO6WjpS4f0Dt4g
+lBOT_TOKEN=7813374449:AAENBb8BN8_oD2QOSP31tKO6WjpS4f0Dt4g
 PORT=3000
-RENDER_URL=YOUR_RENDER_WEB_SERVICE_URL
+RENDER_URL=https://imagicaaa.onrender.com
