--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "pixray-tg-bot",
+  "name": "text-to-image-bot",
   "version": "1.0.0",
-  "description": "Unlimited AI Image Generation Telegram Bot using Pixray API",
+  "description": "A Telegram bot that generates images from text using Hugging Face API",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "server": "node server.js"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.3.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "telegraf": "^4.9.0"
-  }
+    "node-fetch": "^3.3.2",
+    "node-telegram-bot-api": "^0.70.0"
+  },
+  "author": "Shannniiiii",
+  "license": "MIT"
 }
