--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "node-fetch": "^3.3.2",
-    "node-telegram-bot-api": "^0.70.0"
+    "node-telegram-bot-api": "^0.61.0"
   },
-  "author": "Shannniiiii",
+  "author": "shanniiii",
   "license": "MIT"
 }
