--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "text-to-image-bot",
+  "name": "telegram-ai-image-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot that generates images from text using Hugging Face API",
+  "description": "A Telegram bot that generates AI images using Hugging Face Stable Diffusion XL.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2",
-    "node-telegram-bot-api": "^0.61.0"
-  },
-  "author": "shanniiii",
-  "license": "MIT"
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.6.7",
+    "telegraf": "^4.12.2"
+  }
 }
