--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "telegram-ai-image-bot",
-  "version": "1.0.0",
-  "description": "A Telegram bot that generates AI images using Hugging Face Stable Diffusion XL.",
+  "version": "2.0.0",
+  "description": "An advanced Telegram bot that generates AI images using Hugging Face Stable Diffusion XL.",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "keep-alive": "node server.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-fetch": "^2.6.7",
     "telegraf": "^4.12.2"
   }
