--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "telegram-ai-image-bot",
-  "version": "2.0.0",
-  "description": "An advanced Telegram bot that generates AI images using Hugging Face Stable Diffusion XL.",
+  "version": "3.0.0",
+  "description": "An AI-powered Telegram bot with Stable Diffusion XL & Gemini AI",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "fs-extra": "^11.1.1"
   }
 }
