--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "telegram-ai-image-bot",
-  "version": "3.0.0",
-  "description": "An AI-powered Telegram bot with Stable Diffusion XL & Gemini AI",
-  "main": "bot.js",
+  "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "start": "node bot.js",
-    "keep-alive": "node server.js"
-  },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7",
     "telegraf": "^4.12.2",
-    "fs-extra": "^11.1.1"
+    "node-fetch": "^3.3.0",
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1"
+  },
+  "scripts": {
+    "start": "node bot.js"
   }
 }
