--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "telegram-ai-image-bot",
+  "name": "advanced-ai-image-bot",
   "version": "1.0.0",
-  "type": "module",
   "dependencies": {
     "telegraf": "^4.12.2",
-    "node-fetch": "^3.3.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "node-fetch": "^2.6.1",
+    "@google/generative-ai": "^0.1.0"
   },
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
