--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "advanced-ai-image-bot",
+  "name": "telegram-ai-image-bot",
   "version": "1.0.0",
-  "dependencies": {
-    "telegraf": "^4.12.2",
-    "node-fetch": "^2.6.1",
-    "@google/generative-ai": "^0.1.0"
-  },
+  "description": "A Telegram bot that generates AI images using Hugging Face and Google Gemini AI.",
+  "main": "bot.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  }
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.4.1",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.1",
+    "telegraf": "^4.12.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": ["telegram", "bot", "AI", "image-generation", "huggingface", "gemini-ai"],
+  "author": "shannniiiiiii",
+  "license": "MIT"
 }
