--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TELEGRAM_BOT_TOKEN=7813374449:AAENBb8BN8_oD2QOSP31tKO6WjpS4f0Dt4g;
 HF_API_KEY=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;
 GEMINI_API_KEY=AIzaSyDc7u7wTVdDG3zP18xnELKs0HX7-hImkmc;
+PING_URL=https://imagicaaa-1.onrender.com
