--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "telegram-ai-image-bot",
+  "name": "advanced-telegram-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot that generates AI images using Hugging Face and Google Gemini AI.",
-  "main": "bot.js",
-  "type": "module",
+  "description": "An advanced Telegram bot with AI-powered image generation and help features.",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.1",
-    "telegraf": "^4.12.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
+    "telegraf": "^4.12.0",
+    "node-fetch": "^3.3.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
+  }
+},
   "keywords": ["telegram", "bot", "AI", "image-generation", "huggingface", "gemini-ai"],
   "author": "shannniiiiiii",
   "license": "MIT"
