--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "advanced-telegram-bot",
+  "name": "telegram-ai-image-bot",
   "version": "1.0.0",
-  "description": "An advanced Telegram bot with AI-powered image generation and help features.",
-  "main": "index.js",
+  "description": "A Telegram bot that generates AI images using Hugging Face Stable Diffusion XL.",
+  "main": "bot.js",
   "type": "module",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.0",
-    "node-fetch": "^3.3.2"
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.6.7",
+    "telegraf": "^4.12.2"
   }
 }
