--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "telegram-ai-image-bot",
+  "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot that generates AI images using Hugging Face Stable Diffusion XL.",
   "main": "bot.js",
-  "type": "module",
-  "scripts": {
-    "start": "node bot.js"
-  },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "node-fetch": "^2.6.7",
-    "telegraf": "^4.12.2"
+    "node-telegram-bot-api": "^0.61.0",
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
+    "fs": "0.0.1-security"
   }
 }
