--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "node-telegram-bot-api": "^0.61.0",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.6.7",
+    
   }
 }
