--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "telegram-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "A Telegram bot using Node.js",
   "main": "bot.js",
+  "type": "module",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "node-telegram-bot-api": "^0.61.0",
-    "axios": "^1.3.5",
-    "dotenv": "^16.0.3",
-    "fs": "0.0.1-security",
     "node-fetch": "^2.6.7",
-    
+    "node-telegram-bot-api": "^0.61.0",
+    "dotenv": "^16.0.3"
   }
 }
