--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "telegram-bot",
+  "name": "telegram-text-to-image-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot using Node.js",
-  "main": "bot.js",
+  "description": "A Telegram bot that generates images using Hugging Face AI",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7",
-    "node-telegram-bot-api": "^0.61.0",
-    "dotenv": "^16.0.3"
+    "express": "^4.18.2",
+    "telegraf": "^4.12.2",
+    "node-fetch": "^3.3.1",
+    "body-parser": "^1.20.2"
   }
 }
