--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "telegraf": "^4.12.2",
     "node-fetch": "^3.3.1",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "sharp": "^0.32.1",
   }
 }
