--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "telegram-text-to-image-bot",
+  "name": "ai-image-generator-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot that generates images using Hugging Face AI",
-  "main": "server.js",
+  "description": "Telegram bot for AI image generation with multiple style options",
+  "main": "script.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node script.js",
+    "dev": "nodemon script.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "telegraf": "^4.12.2",
     "node-fetch": "^3.3.1",
-    "body-parser": "^1.20.2",
     "sharp": "^0.32.1",
+    "telegraf": "^4.12.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
