--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ai-image-generator-bot",
+  "name": "advanced-telegram-ai-image-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for AI image generation with multiple style options",
+  "description": "Advanced Telegram bot for AI image generation with multiple styles",
   "main": "bot.js",
   "type": "module",
   "scripts": {
@@ -9,9 +9,9 @@
     "dev": "nodemon bot.js"
   },
   "dependencies": {
+    "canvas": "^2.11.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1",
-    "sharp": "^0.32.1",
+    "node-fetch": "^2.6.9",
     "telegraf": "^4.12.2"
   },
   "devDependencies": {
