--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "advanced-telegram-ai-image-bot",
+  "name": "telegram-ai-image-bot",
   "version": "1.0.0",
-  "description": "Advanced Telegram bot for AI image generation with multiple styles",
+  "description": "A Telegram bot that generates images using AI.",
   "main": "bot.js",
-  "type": "module",
   "scripts": {
     "start": "node bot.js",
     "dev": "nodemon bot.js"
   },
+  "keywords": [
+    "telegram",
+    "bot",
+    "ai",
+    "image",
+    "generation"
+  ],
+  "author": "You",
+  "license": "MIT",
   "dependencies": {
-    "canvas": "^2.11.0",
+    "telegraf": "^4.12.2",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9",
-    "telegraf": "^4.12.2"
+    "node-fetch": "^2.6.7",
+    "fs": "^0.0.1-security",
+    "canvas": "^2.11.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "nodemon": "^2.0.20"
   }
 }
