--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "telegram-ai-image-bot",
+  "name": "telegram-image-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot that generates images using AI.",
+  "description": "A Telegram bot for generating images using AI.",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "start": "node bot.js"
   },
-  "keywords": [
-    "telegram",
-    "bot",
-    "ai",
-    "image",
-    "generation"
-  ],
-  "author": "You",
-  "license": "MIT",
   "dependencies": {
-    "telegraf": "^4.12.2",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7",
+    "telegraf": "^4.17.2",
+    "node-fetch": "^3.3.2",
     "fs": "^0.0.1-security",
-    "canvas": "^2.11.2"
+    "canvas": "^2.11.2",
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.0"
   }
 }
