--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "telegraf": "^4.17.2",
-    "axios": "^1.7.2"
+    "telegraf": "4.17.2",
+    "axios": "1.7.2"
   },
   "engines": {
     "node": ">=16.0.0"
