--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
   "name": "telegram-ai-image-bot",
-  "version": "1.0.0",
-  "description": "Telegram bot to generate AI images based on user prompts.",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "dev": "node bot.js",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start:bot": "node bot.js"
   },
-  "author": "आपका नाम",
-  "license": "MIT",
   "dependencies": {
-    "canvas": "^2.11.2",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "lucide-react": "^0.344.0",
     "node-fetch": "^3.3.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.64.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
   }
 }
